# visualiser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
src/: main.cpp
src/components/: Visualiser.svelte
src/routes/: +page.svelte
src/styles/: global.css
